Add logic to selecting answer

--- a/client/index.html
+++ b/client/index.html
@@ -15,8 +15,8 @@
 			<div id="options-wrapper" class="options-wrapper"></div>
 		</div>
 		<div class="buttons-container">
-			<div id="evaluate" class="action-button" onclick="myEvaluation()">Evaluate!</div>
-			<div id="next" class="action-button" onClick="window.location.reload();">Next random question</div>
+			<div id="action-button" class="action-button">Next random question</div>
+			<!-- Evaluate! -->
 		</div>
 		<div id="evaluation-message"></div>
 	</div>
