Add login to switching to next question

--- a/client/index.html
+++ b/client/index.html
@@ -15,8 +15,7 @@
 			<div id="options-wrapper" class="options-wrapper"></div>
 		</div>
 		<div class="buttons-container">
-			<div id="action-button" class="action-button">Next random question</div>
-			<!-- Evaluate! -->
+			<div id="action-button" class="action-button"></div>
 		</div>
 		<div id="evaluation-message"></div>
 	</div>
