Add category header

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
 	<div class="quiz-container">
 		<div></div>
 		<div class="question-container">
+			<p id="category" class="question"></p>
 			<p id="question" class="question"> Which is the correct option? </p>
 			<div id="options-wrapper" class="options-wrapper"></div>
 		</div>
