--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<div class="quiz-container">
+		<div id="progress-bar-container" class="progress-bar-container"></div>
 		<div class="question-container">
 			<p id="category" class="question"></p>
 			<p id="question" class="question">Loading quiz...</p>
